# vulnhuntr2

./: .env.example  CLAUDE.md  CROSS_CHAIN_IMPLEMENTATION.md  ELITE_USAGE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  WARP.md  cross_chain_demo.py  dreams.md  findings.json  findings_test.json  pyproject.toml  requirements.txt  simple_cli.py  test_contract.sol  test_results.json  test_vulnerable_contract.sol  typer.py  vulnhuntr.example.toml
.claude/: settings.local.json
.wake/extension/: local-local-chain-c0c6ec69-6f9a-49ef-96d7-bad6e6d79ba3.json
tests/: test_cli.py  test_config_precedence.py  test_gating_conditions.py  test_mutations.py  test_parsing.py  test_phase5_features.py  test_phase6_features.py  test_registry.py  test_selector_matching.py  test_slither_adapter.py
vulnhuntr/: __init__.py  __main__.py  cli.py  cli_elite.py
vulnhuntr/config/: loader.py  schema.py  settings.py
vulnhuntr/core/: __init__.py  advanced_analyzer.py  bridge_oracle_risk.py  correlation.py  cross_chain_analyzer.py  elite_llm.py  elite_scoring.py  exploit_simulation.py  ffusion_scheduler.py  incremental.py  invariants.py  knowledge_graph.py  llm.py  llm_analysis.py  llm_synthesis.py  models.py  multi_chain.py  mutations.py  orchestrator.py  parser.py  path_slicing.py  pattern_engine.py  plugin_attestation.py  poc_generator.py  policy_engine.py  registry.py  reporting.py  risk_model.py  sarif.py  sarif_export.py  scoring.py  symbolic_exploration.py  triage.py  version.py
vulnhuntr/correlation/: __init__.py  patterns.py  patterns.yml
vulnhuntr/detectors/: __init__.py  access_control_detector.py  advanced_detector.py  base.py  bridge_security.py  cross_chain_relay_replay.py  (+17 more)
(+11 files in other folders)
